@@ -7,6 +7,7 @@ Koan is written & maintained by:
 
 Patches and other contributions from (alphabetically):
 
+    Anton Arapov <aarapov@redhat.com>
     Jasper Capel <capel@stone-it.com>
     Rob Crittenden <rcritten@redhat.com>
     Scott Dodson <sdodson@redhat.com>
