@@ -2,7 +2,7 @@
 
 Summary: Network provisioning tool for Xen and Bare Metal Machines 
 Name: koan
-Version: 1.3.3
+Version: 1.3.4
 Release: 1%{?dist}
 Source0: %{name}-%{version}.tar.gz
 License: GPLv2+
@@ -58,6 +58,9 @@ test "x$RPM_BUILD_ROOT" != "x" && rm -rf $RPM_BUILD_ROOT
 %doc AUTHORS COPYING CHANGELOG README
 
 %changelog
+
+* Wed Dec 10 2008 Michael DeHaan <mdehaan@redhat.com> - 1.3.4-1
+- New test release
 
 * Mon Dec 08 2008 Michael DeHaan <mdehaan@redhat.com> - 1.3.3-1
 - Upstream changes (see CHANGELOG)
