@@ -13,6 +13,7 @@ Koan CHANGELOG
 - allow for communication with ssl-ified ports (anonymous only)
 - ensure requests for profiles/systems get most updated copy from cobbler
 - lvcreate, vgs, etc, paths from shell, not /usr/sbin
+- set selinux context on new LVM partitions
 
 - Thu Sep 18 2008 Michael DeHaan <mdehaan@redhat.com> - 1.2.5-1
 - (BUGF) use file:/ks.cfg for --replace-self to make non-DHCP easier
